# carefirst_api_for_Charlie

./: .env  .pyproject.toml.swp  README.md  env.template  pyproject.toml
.github/workflows/: ci.yml
data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--2926806343830384852.wt  collection-2--2926806343830384852.wt  collection-7--2926806343830384852.wt  index-1--2926806343830384852.wt  index-3--2926806343830384852.wt  index-8--2926806343830384852.wt  index-9--2926806343830384852.wt  sizeStorer.wt
data/.mongodb/mongosh/: 65d3a60c1ab5cd942057dc29_log  65d3a60d0c625f36900b924b_log  65d3a60dd0c659fd21bd52d4_log  config
data/diagnostic.data/: metrics.2024-02-19T19-03-41Z-00000  metrics.2024-02-19T19-03-48Z-00000  metrics.interim
data/guidelines/: ifrc_guidelines.pickle  redcross_guidelines.pickle  who_guidelines.pickle
data/guidelines/ifrc_guidelinesfaiss_index/: index.faiss  index.pkl
db_data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-8632097393453654044.wt  collection-2-8632097393453654044.wt  collection-7-8632097393453654044.wt  index-1-8632097393453654044.wt  index-3-8632097393453654044.wt  index-8-8632097393453654044.wt  index-9-8632097393453654044.wt  sizeStorer.wt
db_data/.mongodb/mongosh/: config  (+2 more)
db_data/diagnostic.data/: metrics.2024-02-19T04-11-07Z-00000  metrics.2024-02-19T04-11-15Z-00000
experiments/01_exploratory_data_analysis/: 01_data_prep.py  02_text_stats.py  03_venn_diagram.py  04_youtube_videos.py
src/: chatgpt.py  dataload.py  db_mongo.py  guideline_metadata.py  llm_js.py  main.py  retrieval.py
(+15 files in other folders)
